Remove unnecessary errors from endpoint
